syntax = "proto3";

package api;

// for grpc-gateway
import "google/api/annotations.proto";

// Node is the service managing the nodes.
service Node {
	// Create creates the given node.
	rpc Create(CreateNodeRequest) returns (CreateNodeResponse) {
		option(google.api.http) = {
			post: "/api/v1/node"
			body: "*"
		};
	}

	// Get returns the node for the requested DevEUI.
	rpc Get(GetNodeRequest) returns (GetNodeResponse) {
		option (google.api.http) = {
			get: "/api/v1/node/{devEUI}"
		};
	}

	// Delete deletes the node matching the given DevEUI.
	rpc Delete(DeleteNodeRequest) returns (DeleteNodeResponse) {
		option (google.api.http) = {
			delete: "/api/v1/node/{devEUI}"
		};
	}

	// List lists the nodes.
	rpc List(ListNodeRequest) returns (ListNodeResponse) {
		option (google.api.http) = {
			get: "/api/v1/node/{offset}/{limit}"
		};
	}

	// ListByAppEUI lists the nodes by given AppEUI.
	rpc ListByAppEUI(ListNodeByAppEUIRequest) returns (ListNodeResponse) {
		option (google.api.http) = {
			get: "/api/v1/node/application/{appEUI}/{offset}/{limit}"
		};
	}

	// Update updates the node matching the given DevEUI.
	rpc Update(UpdateNodeRequest) returns (UpdateNodeResponse) {
		option (google.api.http) = {
			put: "/api/v1/node/{devEUI}"
			body: "*"
		};
	}

	// FlushTXPayloadQueue flushes the tx payload queue for the given DevEUI.
	rpc FlushTXPayloadQueue(FlushTXPayloadQueueRequest) returns (FlushTXPayloadQueueResponse) {
		option (google.api.http) = {
			delete: "/api/v1/node/{devEUI}/txPayloadQueue"
		};
	}
}

message CreateNodeRequest {
	// hex encoded DevEUI
	string devEUI = 1; 
	// hex encoded AppEUI
	string appEUI = 2; 
	// hex encoded AppKey
	string appKey = 3; 
	uint32 rxDelay = 4;
	uint32 rx1DROffset = 5;
	int64 channelListID = 6;
}

message CreateNodeResponse {}

message GetNodeRequest {
	// hex encoded DevEUI
	string devEUI = 1;
}

message GetNodeResponse {
	// hex encoded DevEUI
	string devEUI = 1; 
	// hex encoded AppEUI
	string appEUI = 2; 
	// hex encoded AppKey
	string appKey = 3; 
	uint32 rxDelay = 4;
	uint32 rx1DROffset = 5;
	int64 channelListID = 6;
};

message DeleteNodeRequest {
	// hex encoded DevEUI
	string devEUI = 1;
}

message DeleteNodeResponse {}

message ListNodeRequest {
	int64 limit = 1;
	int64 offset = 2;
}

message ListNodeResponse {
	int64 totalCount = 1;
	repeated GetNodeResponse result = 2;
}

message ListNodeByAppEUIRequest {
	int64 limit = 1;
	int64 offset = 2;
	// hex encoded AppEUI
	string appEUI = 3;
}

message UpdateNodeRequest {
	// hex encoded DevEUI
	string devEUI = 1;
	// hex encoded AppEUI
	string appEUI = 2;
	// hex encoded AppKey
	string appKey = 3;
	uint32 rxDelay = 4;
	uint32 rx1DROffset = 5;
	int64 channelListID = 6;
}

message UpdateNodeResponse {}

message FlushTXPayloadQueueRequest {
	// hex encoded DevEUI
	string devEUI = 1;
}

message FlushTXPayloadQueueResponse {}
